--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="wayfoo.wayfoo.merchantwayfoo">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,6 +17,7 @@
         android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        tools:replace="android:theme"
         android:theme="@style/MyMaterialTheme">
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
