--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,14 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            name "jcenter"
+            url "http://jcenter.bintray.com/"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.0.0'
-        classpath 'com.google.gms:google-services:2.0.0-alpha6'
+        classpath 'com.android.tools.build:gradle:2.1.3'
+        classpath 'com.google.gms:google-services:3.0.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
